# TaseDeck

./: .env  .gitignore  LICENSE  README.md  README.ru.md  TECHNICAL.md  index.html  mcp copy 2.json  mcp copy 3.json  mcp copy 4.json  mcp copy 6.json  mcp copy 7.json  mcp.json  note.md  package-lock.json  package.json  plan.md  tamagui.config.ts  vite.config.ts
.github/workflows/: build-app.yml
.tamagui/: tamagui-components.config.mjs  tamagui.config.mjs
backend/: .env.example  docker-compose.yml  main.py  requirements.txt  worker.py
src/: App.tsx  icons.ts  index.css  main.tsx  tamagui-env.d.ts  tamagui.config.ts  theme.ts  vite-env.d.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/: proxy.mjs  topology_aggregator.mjs
src-tauri/src/: error.rs  lib.rs  main.rs
src-tauri/src/agents/: mcp_json.rs  mod.rs  project_mcp.rs  project_mcp_import.rs  project_proxy_export.rs  proxy_sidecar.rs  registry.rs  resolve.rs  traits.rs  types.rs
src-tauri/src/agents/builtin/: antigravity.rs  claude_code.rs  codex_cli.rs  copilot.rs  cursor.rs  mod.rs  opencode.rs  paths.rs  vscode.rs  windsurf.rs
src-tauri/src/agents/project_discovery/: mod.rs  paths.rs  vscode_like.rs
src-tauri/src/commands/: agent_records.rs  agents.rs  app_setup.rs  graphs.rs  mcp.rs  mcp_oauth.rs  mod.rs  registry.rs  security.rs  topology.rs  usage.rs  workspace.rs
src-tauri/src/core/: app_settings.rs  atomic_write.rs  child_guard.rs  env.rs  fs.rs  mod.rs  node_runtime.rs  process.rs  shell.rs
src-tauri/src/db/: agent_records.rs  app_meta.rs  graphs.rs  init.sql  mcp_config.rs  mod.rs  models.rs  presets.rs  projects.rs  tool_prefs.rs  topology_run.rs  usage_log.rs
src-tauri/src/services/: graph_eligibility.rs  market_probe.rs  mcp_client.rs  mcp_config_template.rs  mcp_protocol.rs  mcp_proxy.rs  mcp_proxy_auth.rs  mcp_registry_install.rs  mcp_remote_transport.rs  mcp_run_command.rs  mcp_server_analysis.rs  mcp_transport_catalog.rs  mod.rs  oauth2.rs  project_disk_queue.rs  proxy_log_ingest.rs  proxy_oauth_refresh.rs  security.rs  topology_run.rs  usage_log.rs  workspace_bootstrap.rs
src/components/: InlineLoader.tsx  JsonPreviewDialog.tsx  ListPaginationFooter.tsx  LoaderSpinner.tsx  ProjectDiskJobFailureListener.tsx  SimpleNameDialog.tsx  ToastHost.tsx  ToolToggle.tsx
src/navigation/: appNavigation.ts  featureFlags.ts
test/: result.json  run-market-probes.mjs  tests.json
test_mcp/: README.md  mcp_stdio_client.mjs  package.json  print-setup.sh  run.sh  server.mjs  simulate-agent.sh  simulate-cursor-agent.mjs  tasedeck-preset.json
web/: next.config.ts  note.md  package-lock.json  package.json  tailwind.config.ts
(+308 files in other folders)
